Updates/Canary/06-Service-V3.yaml
apiVersion: v1
kind: Service
metadata:
   name: webapp-v3-srv
   labels:
      app: webapp-v3-srv
spec:
   ports:
      - port: 80
        name: app
   selector:
      app: canary-webapp-v3-app
