Updates/Canary/08-IngressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: canary-webapp-ingress-route
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`canary.t.container-training.de`)
    kind: Rule
    services:
    - name: canary-webapp-traefik-service
      kind: TraefikService
